# wgpu-3dgs-viewer-app

./: Cargo.toml  README.md  index.html  rust-toolchain  wgpu-3dgs-viewer-app.js  wgpu-3dgs-viewer-app_bg.wasm
.github/workflows/: rust.yml
src/: app.rs  lib.rs  main.rs  util.rs
src/renderer/: measurement.rs
src/tab/: camera.rs  measurement.rs  metadata.rs  mod.rs  models.rs  scene.rs  selection.rs  transform.rs
