[package]
name = "wgpu-3dgs-viewer-app"
version = "0.1.0"
authors = ["Lio Qing"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.83"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = { version = "0.30", features = ["serde"] }
egui_dock = { version = "0.15", features = ["serde"] }
egui-modal = "0.6.0"
eframe = { version = "0.30", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "wgpu",          # Use the wgpu rendering backend.
    "persistence",   # Enable restoring app state when restarting the app.
    "wayland",       # To support Linux (and CI)
] }
log = "0.4"
serde = { version = "1.0.217", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
glam = { version = "0.29.2", features = ["bytemuck"] }
rfd = "0.15.2"
wgpu-3dgs-viewer = { path = "../wgpu-3dgs-viewer", features = [
    "query-toolset",
    "query-texture-overlay",
    "query-cursor",
] }
bytemuck = "1.21.0"
oneshot = "0.1.9"
paste = "1.0.15"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
futures = "0.3.31"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = "0.3.70"              # to access the DOM (to hide the loading text)

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
